# spacesim2

./: .gitignore  CMakeLists.txt  README.md  rename_chat.patch
.githooks/: pre-commit
data/tle/: README.md  tles.txt
include/core/: cities.hpp  city.hpp  environment.hpp  geodesy.hpp  output.hpp  solarsystem.hpp  tle.hpp  tle_to_coe.hpp  vector.hpp
include/model/: lambert_demo.hpp  model.hpp  rocket_model.hpp  tle_report.hpp  tle_spawn.hpp
include/orbit/: lambert.hpp
include/physics/: atmosphere.hpp  coe.hpp  engine.hpp  orbit.hpp  rocket.hpp  sun.hpp
include/sim/: expand_scenario.hpp  scenario.hpp  sim.hpp
models/: ace_cities.model  ace_geo.model  ace_plus_leo.simulation  rocket.output  rocket_to_ace.output
scenarios/: ace_geo.scenario  ace_plus_leo.scenario  lambert_demo.scenario  ref.scenario  rocket_to_ace.scenario  tc.scenario  tle_hour.expanded.scenario  tle_hour.scenario
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  cities.cpp  environment.cpp  geodesy.cpp  output.cpp  solarsystem.cpp  tle.cpp  tle_to_coe.cpp  vector.cpp
src/core/orbit/: lambert.cpp
src/entities/: CMakeLists.txt
src/io/: CMakeLists.txt
src/model/: CMakeLists.txt  lambert_demo.cpp  model.cpp  rocket_model.cpp  tle_report.cpp  tle_spawn.cpp
src/orbit/: CMakeLists.txt  lambert.cpp
src/physics/: CMakeLists.txt  atmosphere.cpp  engine.cpp  orbit.cpp  rocket.cpp  sun.cpp
src/sim/: CMakeLists.txt  expand_scenario.cpp  scenario.cpp  sim.cpp
